# ROS-Workshop

./: README.md  instructions.md
day1/: README.md
day1/spaceship_interfaces/: package.xml
day2/camera_tag/: CMakeLists.txt
day3/: README.md
day3/simulation_files/: CMakeLists.txt  package.xml
day3/simulation_files/config/: control_parameters.yaml
day3/simulation_files/launch/: simulation_run.launch.py
day3/simulation_files/urdf/: robot.urdf
src/day1/: README.md  instructions.md
src/day1/spaceship/: CMakeLists.txt  package.xml
src/day1/spaceship/src/: spaceship.cpp
src/day1/spaceship_interfaces/: CMakeLists.txt
src/day2/: README.md
src/day2/camera_tag/: CMakeLists.txt  package.xml
src/day2/camera_tag/src/: aruco_detection.cpp
