<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>simulation_files</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="leonardompp@gmail.com">leonardompp0</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>ros_gz</exec_depend> <!-- This will install Ignition Fortress. Don't install with Gazebo Classic 11-->
  <exec_depend>ros2_control</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>ign_ros2_control</exec_depend> <!-- Plugin to run ros2 control in Ignition. Changed names compared to official docs --> 
  
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
